Ultimo Commit antes de meter Bootstrap

--- a/src/pug/registroEmpleados.pug
+++ b/src/pug/registroEmpleados.pug
@@ -4,6 +4,7 @@ html(lang="en")
         meta(charset="UTF-8")
         meta(name="viewport", content="width=device-width, initial-scale=1.0")
         meta(http-equiv="X-UA-Compatible", content="ie=edge")
+        <link href="https://fonts.googleapis.com/css?family=Muli&display=swap" rel="stylesheet">
         title Document
     body
         .container
@@ -21,11 +22,8 @@ html(lang="en")
                     .container__form_section__form__container_input.container__form_section__form__container_input--cargo
                         label.container__form_section__form__container_input__title.container__form_section__form__container_input--cargo__title(for="cargo") Cargo
                         select.container__form_section__form__container_input__select.container__form_section__form__container_input--cargo__select(name="")
-                            option Alabama
-                            option Alabama
-                            option Alabama
-                            option Alabama
-                            option Alabama
+                            option Masculino
+                            option Femenino
                     
                     .container__form_section__form__container_input.container__form_section__form__container_input--edad
                         label.container__form_section__form__container_input__title.container__form_section__form__container_input--edad__title(for="edad") Edad
@@ -34,11 +32,8 @@ html(lang="en")
                     .container__form_section__form__container_input.container__form_section__form__container_input--sexo
                         label.container__form_section__form__container_input__title.container__form_section__form__container_input--sexo__title(for="sexo") Sexo
                         select.container__form_section__form__container_input__select.container__form_section__form__container_input--sexo__select(name="")
-                            option Alabama
-                            option Alabama
-                            option Alabama
-                            option Alabama
-                            option Alabama
+                            option Masculino
+                            option Femenino
 
                     .container__form_section__form__container_input.container__form_section__form__container_input--jornada
                         label.container__form_section__form__container_input__title.container__form_section__form__container_input--jornada__title(for="jornada") Jornada
@@ -70,23 +65,5 @@ html(lang="en")
                             option Alabama
                             option Alabama
                             option Alabama
-
-                    //- label(for="") Edad
-                    //- input(type="text", name="")
-
-                    //- label(for="") Sexo
-                    //- input(type="text", name="")
-
-                    //- label(for="") Jornada
-                    //- input(type="text", name="")
-
-                    //- label(for="") Escolaridad
-                    //- input(type="text", name="")
-
-                    //- label(for="") E-mail
-                    //- input(type="text", name="")
-
-                    //- label(for="") Departamento
-                    //- input(type="text", name="")
 
                     
