--- a/src/scss/registroEmpleados/registroEmpleados.scss
+++ b/src/scss/registroEmpleados/registroEmpleados.scss
@@ -1,2 +1,20 @@
-@import '../global_partials/normalize';
+// @import '../global_partials/normalize';
+
+@import 'partials/bootstrap';
 @import 'partials/grid';
+
+
+.form-control:focus {
+    color: #495057;
+    background-color: #fff;
+    border-color: #80bdff;
+    outline: 0;
+    box-shadow: 0 0 0 1px rgba(0, 123, 255, 0.25);
+}
+
+.custom-select:focus {
+    border-color: #80bdff;
+    outline: 0;
+    box-shadow: 0 0 0 0.1rem rgba(0, 123, 255, 0.25);
+    outline: none !important;
+  }
