registro de Usuarios finalizado

--- a/src/pug/registroEmpleados.pug
+++ b/src/pug/registroEmpleados.pug
@@ -20,7 +20,7 @@ html(lang="en")
                     .formSection__form__formGroup.formSection__form__formGroup--edad
                         label.formSection__form__formGroup__title.formSection__form__formGroup--edad__title Edad
                         .formSection__form__formGroup__inputContainer.formSection__form__formGroup--edad__inputContainer
-                            input.formSection__form__formGroup__inputContainer__input.formSection__form__formGroup--edad__inputContainer__input(type="number" class="form-control" name="")                    
+                            input.formSection__form__formGroup__inputContainer__input.formSection__form__formGroup--edad__inputContainer__input(type="number" class="form-control" name="" min="18" max="90")                    
                     .formSection__form__formGroup.formSection__form__formGroup--sexo
                         label.formSection__form__formGroup__title.formSection__form__formGroup--sexo__title Sexo
                         .formSection__form__formGroup__inputContainer.formSection__form__formGroup--sexo__inputContainer                        
@@ -69,7 +69,7 @@ html(lang="en")
                                 option Preparatoria
                     
                     
-                    <button type="submit" class="btn btn-primary">Submit</button>
+                    <button type="submit" class="btn btn-primary">Agregar</button>
                     
         <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
